--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
     <head>
         <title> We Hack Back</title>
     </head>
+    <body>
+        <h1>Our first step towards a safer tomorrow.</h1>
+        <p>This is our static webpage for the beginning of a long journey ahead.</p>
+    </body>
 </html>
