--- a/index.html
+++ b/index.html
@@ -1,9 +1,54 @@
-<html>
-    <head>
-        <title> We Hack Back</title>
-    </head>
-    <body>
-        <h1>Our first step towards a safer tomorrow.</h1>
-        <p>This is our static webpage for the beginning of a long journey ahead.</p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>We Hack Back</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: linear-gradient(135deg, #2a2a72, #009ffd);
+      color: #fff;
+      text-align: center;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 0.5em;
+    }
+    p {
+      max-width: 600px;
+      line-height: 1.6;
+    }
+    .cta {
+      margin-top: 2em;
+      padding: 0.75em 1.5em;
+      border: none;
+      background: #ff8c42;
+      color: #fff;
+      font-size: 1em;
+      border-radius: 4px;
+      cursor: pointer;
+      text-decoration: none;
+    }
+    .cta:hover {
+      background: #ff7000;
+    }
+  </style>
+</head>
+<body>
+  <h1>Our first step towards a safer tomorrow</h1>
+  <p>
+    Welcome to Hack Back. We're dedicated to helping victims of cybercrime reclaim
+    their digital lives. If you need assistance, reach out and we'll do our best
+    to respond within 24 hours.
+  </p>
+  <a href="README.md" class="cta">Contact us on Signal</a>
+</body>
 </html>
