Fix icon warnings and center features

--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
     }
     .features {
       display: flex;
+      max-width: 1200px;
+      margin: 0 auto;
       flex-wrap: wrap;
       justify-content: center;
       gap: 2em;
@@ -160,17 +162,17 @@
 
   <section class="features">
     <div class="feature">
-      <i class="fa-solid fa-bolt"></i>
+      <i class="fa-solid fa-bolt" aria-hidden="true">&nbsp;</i>
       <h2>Fast Response</h2>
       <p>Our team aims to respond to every request within 24 hours.</p>
     </div>
     <div class="feature">
-      <i class="fa-solid fa-shield-halved"></i>
+      <i class="fa-solid fa-shield-halved" aria-hidden="true">&nbsp;</i>
       <h2>Expert Guidance</h2>
       <p>Seasoned security professionals help you navigate your situation safely.</p>
     </div>
     <div class="feature">
-      <i class="fa-solid fa-hand-holding-heart"></i>
+      <i class="fa-solid fa-hand-holding-heart" aria-hidden="true">&nbsp;</i>
       <h2>No Hidden Costs</h2>
       <p>We offer our assistance free of charge to help you get back on your feet.</p>
     </div>
