--- a/index.html
+++ b/index.html
@@ -5,121 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cyber Help Services</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-      color: #333;
-      line-height: 1.6;
-      background: linear-gradient(to bottom, #ffffff, #f0f0f0);
-    }
-
-    .navbar {
-      background: #111;
-      color: #fff;
-      padding: 1em 2em;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: sticky;
-      top: 0;
-    }
-
-    .logo {
-      font-weight: 700;
-      font-size: 1.2em;
-    }
-
-    .nav-links {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      gap: 1em;
-    }
-
-    .nav-links a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: 700;
-    }
-
-    .nav-links a:hover {
-      text-decoration: underline;
-    }
-
-    .hero {
-      background:
-        linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
-        url('https://source.unsplash.com/1600x900/?cybersecurity') center/cover no-repeat;
-      color: #fff;
-      text-align: center;
-      padding: 8em 1em;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-
-    .hero h1 {
-      font-size: 3em;
-      margin-bottom: 0.5em;
-    }
-
-    .hero p {
-      font-size: 1.25em;
-      margin-bottom: 1.5em;
-      max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    .cta {
-      background: #ff8c42;
-      color: #fff;
-      padding: 0.75em 1.5em;
-      border-radius: 4px;
-      text-decoration: none;
-      font-weight: 700;
-    }
-
-    .cta:hover {
-      background: #ff7000;
-    }
-
-    .info {
-      padding: 4em 1em;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-      background: #fff;
-    }
-
-    .info:nth-of-type(even) {
-      background: #f4f4f4;
-    }
-
-    .card {
-      flex: 0 0 300px;
-      margin: 1em;
-      padding: 2em;
-      border-radius: 8px;
-      background: #fff;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-
-    footer {
-      background: #111;
-      color: #fff;
-      text-align: center;
-      padding: 1.5em;
-    }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <nav class="navbar">
@@ -151,6 +37,23 @@
       <i class="fas fa-lock fa-2x"></i>
       <h3>Prevention Planning</h3>
       <p>Strategies and training to help prevent future incidents.</p>
+    </div>
+  </section>
+  <section id="testimonials">
+    <h2>What Our Clients Say</h2>
+    <div class="testimonial-grid">
+      <figure>
+        <blockquote>"They helped me secure my business."</blockquote>
+        <figcaption>- Alex</figcaption>
+      </figure>
+      <figure>
+        <blockquote>"Professional and swift response."</blockquote>
+        <figcaption>- Jamie</figcaption>
+      </figure>
+      <figure>
+        <blockquote>"I feel safe online again."</blockquote>
+        <figcaption>- Taylor</figcaption>
+      </figure>
     </div>
   </section>
 
