Revamp style with iOS look and update branding

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cyber Help Services</title>
+  <title>We Hack Back</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo">Cyber Help Services</div>
+    <div class="logo">We Hack Back</div>
     <ul class="nav-links">
       <li><a href="#services">Services</a></li>
       <li><a href="#contact">Contact</a></li>
@@ -66,7 +66,7 @@
   </section>
 
   <footer>
-    &copy; 2024 Cyber Help Services. All rights reserved.
+    &copy; 2024 We Hack Back. All rights reserved.
   </footer>
 </body>
 </html>
