Update color scheme and hero

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="hero">
     <h1>Recover and Protect with Confidence</h1>
     <p>Our experts are ready to help you bounce back from cyber incidents and safeguard your future.</p>
-    <a href="#contact" class="cta">Get Help Now</a>
+    <a href="#contact" class="cta">Get Support</a>
   </header>
 
   <section id="services" class="info">
