--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </section>
 
   <section id="contact" class="info">
-    <div style="max-width: 700px; text-align: center;">
+    <div class="contact-wrapper">
       <h2>Ready to Get Started?</h2>
       <p>Reach out and our team will respond within 24 hours.</p>
       <a href="mailto:help@example.com" class="cta">Contact Us</a>
