Add accessible text for icons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav class="navbar">
     <div class="logo">We Hack Back</div>
     <button class="menu-toggle" aria-label="Toggle navigation">
-      <i class="fas fa-bars"></i>
+      <i class="fas fa-bars" aria-hidden="true"></i>
     </button>
     <ul class="nav-links">
       <li><a href="#services">Services</a></li>
@@ -27,17 +27,20 @@
 
   <section id="services" class="info">
     <div class="card">
-      <i class="fas fa-shield-alt fa-2x"></i>
+      <i class="fas fa-shield-alt fa-2x" aria-hidden="true"></i>
+      <span class="sr-only">Incident Response</span>
       <h3>Incident Response</h3>
       <p>Immediate assistance to contain breaches and guide you through recovery.</p>
     </div>
     <div class="card">
-      <i class="fas fa-user-secret fa-2x"></i>
+      <i class="fas fa-user-secret fa-2x" aria-hidden="true"></i>
+      <span class="sr-only">Forensics</span>
       <h3>Forensics</h3>
       <p>In-depth investigation and analysis to uncover what happened.</p>
     </div>
     <div class="card">
-      <i class="fas fa-lock fa-2x"></i>
+      <i class="fas fa-lock fa-2x" aria-hidden="true"></i>
+      <span class="sr-only">Prevention Planning</span>
       <h3>Prevention Planning</h3>
       <p>Strategies and training to help prevent future incidents.</p>
     </div>
