Replace binary favicon with SVG and update meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>We Hack Back</title>
+  <meta name="description" content="Free incident response and cybersecurity support for victims of cybercrime.">
+  <meta property="og:title" content="We Hack Back">
+  <meta property="og:description" content="Free incident response and cybersecurity support for victims of cybercrime.">
+  <meta property="og:image" content="/favicon.svg">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
