--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="Free incident response and cybersecurity support for victims of cybercrime.">
   <meta property="og:title" content="We Hack Back">
   <meta property="og:description" content="Free incident response and cybersecurity support for victims of cybercrime.">
-  <meta property="og:image" content="/favicon.svg">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+  <meta property="og:image" content="/transparent%20shield%20logo.png">
+  <link rel="icon" href="/transparent%20shield%20logo.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
