feat: style testimonials as cards

--- a/index.html
+++ b/index.html
@@ -53,15 +53,36 @@
   <section id="testimonials">
     <h2>What Our Clients Say</h2>
     <div class="testimonial-grid">
-      <figure>
+      <figure class="testimonial-card">
+        <div class="stars" aria-label="5 star rating" role="img">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+        </div>
         <blockquote>"They helped me secure my business."</blockquote>
         <figcaption>- Alex</figcaption>
       </figure>
-      <figure>
+      <figure class="testimonial-card">
+        <div class="stars" aria-label="5 star rating" role="img">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+        </div>
         <blockquote>"Professional and swift response."</blockquote>
         <figcaption>- Jamie</figcaption>
       </figure>
-      <figure>
+      <figure class="testimonial-card">
+        <div class="stars" aria-label="5 star rating" role="img">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+        </div>
         <blockquote>"I feel safe online again."</blockquote>
         <figcaption>- Taylor</figcaption>
       </figure>
