Replace testimonials with trust assurances

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </button>
     <ul class="nav-links">
       <li><a href="#services">Services</a></li>
+      <li><a href="#trust">Trust</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
@@ -50,42 +51,35 @@
       <p>Strategies and training to help prevent future incidents.</p>
     </div>
   </section>
-  <section id="testimonials">
-    <h2>What Our Clients Say</h2>
-    <div class="testimonial-grid">
-      <figure class="testimonial-card">
-        <div class="stars" aria-label="5 star rating" role="img">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
+
+  <section id="trust" class="info">
+    <div class="trust-wrapper">
+      <div class="trust-header">
+        <h2>Built on security principles you can verify</h2>
+        <p>Every case follows documented playbooks, transparent communication, and industry standards designed to keep your data safe.</p>
+      </div>
+      <div class="trust-grid">
+        <div class="trust-card">
+          <i class="fas fa-user-check fa-2x" aria-hidden="true"></i>
+          <h3>Vetted responders</h3>
+          <p>Incident handlers with backgrounds in enterprise security and public-interest tech, backed by NDAs for sensitive work.</p>
         </div>
-        <blockquote>"They helped me secure my business."</blockquote>
-        <figcaption>- Alex</figcaption>
-      </figure>
-      <figure class="testimonial-card">
-        <div class="stars" aria-label="5 star rating" role="img">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
+        <div class="trust-card">
+          <i class="fas fa-clipboard-list fa-2x" aria-hidden="true"></i>
+          <h3>Documented process</h3>
+          <p>Clear runbooks for triage, containment, and recovery mapped to NIST CSF so you always know the next step.</p>
         </div>
-        <blockquote>"Professional and swift response."</blockquote>
-        <figcaption>- Jamie</figcaption>
-      </figure>
-      <figure class="testimonial-card">
-        <div class="stars" aria-label="5 star rating" role="img">
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
-          <i class="fas fa-star"></i>
+        <div class="trust-card">
+          <i class="fas fa-lock fa-2x" aria-hidden="true"></i>
+          <h3>Data handling discipline</h3>
+          <p>Scoped access, encrypted handoffs, and minimal data retention to protect evidence and privacy.</p>
         </div>
-        <blockquote>"I feel safe online again."</blockquote>
-        <figcaption>- Taylor</figcaption>
-      </figure>
+      </div>
+      <ul class="trust-points">
+        <li><i class="fas fa-check" aria-hidden="true"></i><span>4-hour response goal for new cases and a dedicated point of contact throughout the incident.</span></li>
+        <li><i class="fas fa-check" aria-hidden="true"></i><span>Post-incident hardening plan with prioritized fixes and training materials.</span></li>
+        <li><i class="fas fa-check" aria-hidden="true"></i><span>Partnership-friendly: ready to collaborate with your legal counsel, insurer, or MSP.</span></li>
+      </ul>
     </div>
   </section>
 
