Align Our Team section with Who we help layout

--- a/index.html
+++ b/index.html
@@ -26,35 +26,80 @@
   </nav>
 
   <header class="hero">
-    <h1>Recover and Protect with Confidence</h1>
-    <p>Our experts are ready to help you bounce back from cyber incidents and safeguard your future.</p>
-    <a href="#contact" class="cta">Get Support</a>
+    <div class="hero-content">
+      <div>
+        <p class="eyebrow">Free help for people harmed by cybercrime</p>
+        <h1>Recover, rebuild, and feel safe online again</h1>
+        <p class="lede">Security responders, investigators, and advocates who guide victims through containment, evidence collection, and next-step planning with empathy.</p>
+        <div class="hero-actions">
+          <a href="#contact" class="cta">Request support</a>
+          <a href="#emergency" class="secondary-cta">See urgent steps</a>
+        </div>
+        <p class="availability">4-hour response goal · Confidential & trauma-informed</p>
+      </div>
+    </div>
   </header>
 
+  <section id="emergency" class="banner">
+    <div class="banner-content">
+      <div>
+        <p class="eyebrow">If something is happening right now</p>
+        <h2>Pause, capture evidence, and get a responder involved</h2>
+        <p>We guide you through containment and safe data collection so you can share what happened without risking further harm.</p>
+        <ul class="steps">
+          <li><i class="fas fa-stopwatch" aria-hidden="true"></i><span>Disconnect compromised devices from the internet if safe to do so.</span></li>
+          <li><i class="fas fa-camera" aria-hidden="true"></i><span>Screenshot suspicious messages, pop-ups, or transactions before closing them.</span></li>
+          <li><i class="fas fa-envelope-open-text" aria-hidden="true"></i><span>Forward phishing emails with full headers when possible.</span></li>
+        </ul>
+      </div>
+      <div class="banner-cta">
+        <p class="hotline-label">Prefer to talk?</p>
+        <a class="cta full-width" href="mailto:help@wehackback.org">Email a responder</a>
+        <p class="hotline-note">We never ask for payment or remote control of your device.</p>
+      </div>
+    </div>
+  </section>
+
   <section id="services" class="info">
-    <div class="card">
-      <i class="fas fa-shield-alt fa-2x" aria-hidden="true"></i>
-      <span class="sr-only">Incident Response</span>
-      <h3>Incident Response</h3>
-      <p>Immediate assistance to contain breaches and guide you through recovery.</p>
-    </div>
-    <div class="card">
-      <i class="fas fa-user-secret fa-2x" aria-hidden="true"></i>
-      <span class="sr-only">Forensics</span>
-      <h3>Forensics</h3>
-      <p>In-depth investigation and analysis to uncover what happened.</p>
-    </div>
-    <div class="card">
-      <i class="fas fa-lock fa-2x" aria-hidden="true"></i>
-      <span class="sr-only">Prevention Planning</span>
-      <h3>Prevention Planning</h3>
-      <p>Strategies and training to help prevent future incidents.</p>
+    <div class="trust-wrapper services-wrapper">
+      <div class="trust-header">
+        <p class="eyebrow">WHAT WE DO</p>
+        <h2>Hands-on help from first alert to recovery</h2>
+        <p>Responders, investigators, and advocates work together to contain the incident, preserve evidence, and guide you to safer ground.</p>
+      </div>
+      <div class="trust-grid services-grid">
+        <div class="trust-card">
+          <i class="fas fa-shield-alt fa-2x" aria-hidden="true"></i>
+          <span class="sr-only">Incident Response</span>
+          <h3>Incident Response</h3>
+          <p>Immediate containment help, safe evidence collection, and step-by-step guidance to stop the damage.</p>
+        </div>
+        <div class="trust-card">
+          <i class="fas fa-user-secret fa-2x" aria-hidden="true"></i>
+          <span class="sr-only">Forensics</span>
+          <h3>Forensics</h3>
+          <p>Investigation to understand what happened, what was taken, and what needs to be reported.</p>
+        </div>
+        <div class="trust-card">
+          <i class="fas fa-lock fa-2x" aria-hidden="true"></i>
+          <span class="sr-only">Prevention Planning</span>
+          <h3>Prevention Planning</h3>
+          <p>Actionable recovery plans, follow-up scans, and training to prevent repeat attacks.</p>
+        </div>
+        <div class="trust-card">
+          <i class="fas fa-heart fa-2x" aria-hidden="true"></i>
+          <span class="sr-only">Victim Advocacy</span>
+          <h3>Victim Advocacy</h3>
+          <p>Support contacting banks, platforms, and law enforcement with the evidence they need to act.</p>
+        </div>
+      </div>
     </div>
   </section>
 
   <section id="trust" class="info">
     <div class="trust-wrapper">
       <div class="trust-header">
+        <p class="eyebrow">How we work</p>
         <h2>Built on security principles you can verify</h2>
         <p>Every case follows documented playbooks, transparent communication, and industry standards designed to keep your data safe.</p>
       </div>
@@ -62,7 +107,7 @@
         <div class="trust-card">
           <i class="fas fa-user-check fa-2x" aria-hidden="true"></i>
           <h3>Vetted responders</h3>
-          <p>Incident handlers with backgrounds in enterprise security and public-interest tech, backed by NDAs for sensitive work.</p>
+          <p>Incident handlers with enterprise security backgrounds and public-interest experience, backed by NDAs for sensitive work.</p>
         </div>
         <div class="trust-card">
           <i class="fas fa-clipboard-list fa-2x" aria-hidden="true"></i>
@@ -74,57 +119,140 @@
           <h3>Data handling discipline</h3>
           <p>Scoped access, encrypted handoffs, and minimal data retention to protect evidence and privacy.</p>
         </div>
+        <div class="trust-card">
+          <i class="fas fa-hand-holding-heart fa-2x" aria-hidden="true"></i>
+          <h3>Victim-centered approach</h3>
+          <p>Communication that avoids blame, prioritizes your consent, and keeps you in control of decisions.</p>
+        </div>
       </div>
       <ul class="trust-points">
         <li><i class="fas fa-check" aria-hidden="true"></i><span>4-hour response goal for new cases and a dedicated point of contact throughout the incident.</span></li>
-        <li><i class="fas fa-check" aria-hidden="true"></i><span>Post-incident hardening plan with prioritized fixes and training materials.</span></li>
+        <li><i class="fas fa-check" aria-hidden="true"></i><span>Post-incident hardening plan with prioritized fixes and training materials tailored to your risk.</span></li>
         <li><i class="fas fa-check" aria-hidden="true"></i><span>Partnership-friendly: ready to collaborate with your legal counsel, insurer, or MSP.</span></li>
+        <li><i class="fas fa-check" aria-hidden="true"></i><span>Respectful of your pace: we align with what feels safe for you and your household or team.</span></li>
+      </ul>
+    </div>
+  </section>
+
+  <section id="victims" class="info">
+    <div class="trust-wrapper">
+      <div class="trust-header">
+        <p class="eyebrow">Who we help</p>
+        <h2>You deserve real support, not judgment</h2>
+        <p>Different victims, same promise: calm guidance, clear steps, and evidence handled with care.</p>
+      </div>
+      <div class="trust-grid">
+        <div class="trust-card">
+          <i class="fas fa-store fa-2x" aria-hidden="true"></i>
+          <span class="sr-only">Small businesses</span>
+          <h3>Small businesses</h3>
+          <p class="role">Ransomware, invoice fraud, business email compromise</p>
+          <p>We triage attacks, coordinate with vendors, and prepare the evidence insurers and lawyers need.</p>
+        </div>
+        <div class="trust-card">
+          <i class="fas fa-users fa-2x" aria-hidden="true"></i>
+          <span class="sr-only">Individuals and families</span>
+          <h3>Individuals &amp; families</h3>
+          <p class="role">Account takeover, sextortion, harassment</p>
+          <p>We help secure accounts, preserve proof for investigators, and reduce exposure on devices and platforms.</p>
+        </div>
+        <div class="trust-card">
+          <i class="fas fa-hands-helping fa-2x" aria-hidden="true"></i>
+          <span class="sr-only">Nonprofits and community organizations</span>
+          <h3>Nonprofits &amp; community orgs</h3>
+          <p class="role">Doxing, credential theft, targeted phishing</p>
+          <p>We design quick mitigations that keep critical services running and protect staff and volunteers.</p>
+        </div>
+      </div>
+      <ul class="trust-points">
+        <li><i class="fas fa-check" aria-hidden="true"></i><span>We adapt communication to your comfort level and pace so you stay in control.</span></li>
+        <li><i class="fas fa-check" aria-hidden="true"></i><span>We coordinate with banks, platforms, and local authorities using evidence we help you collect safely.</span></li>
+        <li><i class="fas fa-check" aria-hidden="true"></i><span>We deliver clear next steps and follow-up hardening tailored to each situation.</span></li>
       </ul>
     </div>
   </section>
 
   <section id="about" class="info">
-    <div class="about-wrapper">
-      <h2>Our Team</h2>
-      <div class="team-grid">
-        <div class="team-member">
+    <div class="trust-wrapper">
+      <div class="trust-header">
+        <p class="eyebrow">Our Team</p>
+        <h2>The responders behind your recovery</h2>
+        <p>Investigators, analysts, and advocates collaborate so you have one coordinated team guiding every step.</p>
+      </div>
+      <div class="trust-grid team-grid">
+        <div class="trust-card team-card">
           <img src="https://via.placeholder.com/100" alt="Alice Smith">
           <h3>Alice Smith</h3>
           <p class="role">Lead Investigator</p>
           <p>Specializes in forensic analysis and incident response.</p>
         </div>
-        <div class="team-member">
+        <div class="trust-card team-card">
           <img src="https://via.placeholder.com/100" alt="Bob Johnson">
           <h3>Bob Johnson</h3>
           <p class="role">Security Analyst</p>
           <p>Focuses on threat assessment and prevention planning.</p>
         </div>
-        <div class="team-member">
+        <div class="trust-card team-card">
           <img src="https://via.placeholder.com/100" alt="Carol Lee">
           <h3>Carol Lee</h3>
           <p class="role">Support Coordinator</p>
           <p>Ensures clients receive timely and effective assistance.</p>
         </div>
       </div>
+      <ul class="trust-points">
+        <li><i class="fas fa-check" aria-hidden="true"></i><span>Every case lead pairs investigative rigor with trauma-aware communication.</span></li>
+        <li><i class="fas fa-check" aria-hidden="true"></i><span>Cross-functional responders share updates so you never have to repeat yourself.</span></li>
+        <li><i class="fas fa-check" aria-hidden="true"></i><span>Specialists stay engaged after containment to harden systems and restore confidence.</span></li>
+      </ul>
     </div>
   </section>
 
-  <section id="contact" class="info">
+  <section id="contact" class="info muted">
     <div class="contact-wrapper">
-      <h2>Ready to Get Started?</h2>
-      <p>Reach out and our team will respond within 24 hours.</p>
-      <!-- The form uses a mailto action. Consider server-side processing for reliable handling. -->
-      <form class="contact-form" action="mailto:help@example.com" method="POST" enctype="text/plain">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="email" placeholder="Your Email" required>
-        <textarea name="message" placeholder="How can we help?" rows="5" required></textarea>
-        <button type="submit" class="cta">Send Message</button>
+      <p class="eyebrow">Reach our responders</p>
+      <h2>Ready to get started?</h2>
+      <p>Share what happened and how to contact you. We aim to respond within 4 hours.</p>
+      <form class="contact-form" action="mailto:help@wehackback.org" method="POST" enctype="text/plain">
+        <label class="sr-only" for="name">Your name</label>
+        <input id="name" type="text" name="name" placeholder="Your Name" required>
+
+        <label class="sr-only" for="email">Your email</label>
+        <input id="email" type="email" name="email" placeholder="Your Email" required>
+
+        <label class="sr-only" for="phone">Phone (optional)</label>
+        <input id="phone" type="tel" name="phone" placeholder="Phone (optional)">
+
+        <label class="sr-only" for="incident">Incident type</label>
+        <input id="incident" type="text" name="incident" placeholder="Incident type (e.g., ransomware, account takeover)" required>
+
+        <label class="sr-only" for="message">How can we help?</label>
+        <textarea id="message" name="message" placeholder="What happened? Include when it started and affected accounts or devices." rows="5" required></textarea>
+
+        <label class="sr-only" for="consent">Data handling</label>
+        <div class="consent">
+          <input id="consent" type="checkbox" name="consent" required>
+          <label for="consent">I understand We Hack Back will use this information only to respond to my request.</label>
+        </div>
+
+        <button type="submit" class="cta">Send message</button>
       </form>
+      <p class="contact-note">Prefer to use your own email? Send details to <a href="mailto:help@wehackback.org">help@wehackback.org</a>.</p>
     </div>
   </section>
 
   <footer>
-    &copy; 2024 We Hack Back. All rights reserved.
+    <div class="footer-content">
+      <div>
+        <p class="logo">We Hack Back</p>
+        <p>Free incident response and security help for victims of cybercrime.</p>
+      </div>
+      <div>
+        <p class="footer-heading">Need help?</p>
+        <p>Email <a href="mailto:help@wehackback.org">help@wehackback.org</a></p>
+        <p class="footer-note">We will never pressure you to pay or share passwords.</p>
+      </div>
+    </div>
+    <p class="copyright">&copy; 2024 We Hack Back. All rights reserved.</p>
   </footer>
   <script>
     const toggle = document.querySelector('.menu-toggle');
